# icu_cmake

icu4c/source/: CMakeLists.txt  icudemo.cc
icu4c/source/common/: CMakeLists.txt
icu4c/source/io/: CMakeLists.txt
